# Hackropole

./: .gitmodules  LICENSE  README.md  pyproject.toml
crypto/challenges/fcsc2022-crypto-a-laise/: writeup.md
crypto/challenges/fcsc2024-crypto-adversarial-crypto-1/: writeup.md
crypto/fcsc2022-crypto-a-laise/: decrypt.py  writeup.md
crypto/fcsc2024-crypto-adversarial-crypto-1/: adversarial-crypto-infant.py  resolution.py  writeup.md
payloads/web/: postgresql_injection.md
templates/: cve_template.md
tools/: prepare.py  web.md
tools/utils/: prepare.py
vulns/: CVE-2025-66803.md
web/challenges/csc2020-web-babel-web/: writeup.md
web/challenges/csc2023-web-tes-lent/: docker-compose.yml  writeup.md
web/challenges/fcsc2019-web-ceci-n-est-pas-une-pipe/: docker-compose.yml  writeup.md
web/challenges/fcsc2021-web-baguette-vpn-1/: writeup.md
web/challenges/fcsc2021-web-baguette-vpn-2/: writeup.md
web/challenges/fcsc2022-web-chatpristi-1/: docker-compose.yml  writeup.md
web/challenges/fcsc2022-web-chatpristi-2/: inject.py  writeup.md
web/challenges/fcsc2023-web-enisa-flag-store-1/: writeup.md
web/challenges/fcsc2023-web-enisa-flag-store-2/: writeup.md
web/csc2023-web-tes-lent/: writeup.md
web/fcsc2019-web-ceci-n-est-pas-une-pipe/: writeup.md
web/fcsc2021-web-baguette-vpn-2/: docker-compose.yml  writeup.md
web/fcsc2022-web-chatpristi-1/: writeup.md
web/fcsc2023-web-enisa-flag-store-1/: enisa-flag-store.go  signup.py  writeup.md
web/fcsc2023-web-enisa-flag-store-2/: docker-compose.yml  writeup.md
(+3 files in other folders)
