[project]
name = "hackropole" # Satisfy Even Better TOML
version = "0.1.0" # Satisfy Even Better TOML
dependencies = ["pycryptodome (>=3.23.0,<4.0.0)"]
requires-python = ">=3.7,<3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
